<resources>
    <string name="app_name">ArchitecturePatterns</string>
    <string name="todo_list_title">TODO App</string>
    <string name="todo_list_description">Manage your pending work along your day. Be productive.</string>
    <string name="todo_list_empty">Start adding your TODO items here.</string>
    <string name="todo_title_hint">Title</string>
    <string name="todo_description_hint">Description</string>
    <string name="todo_save_button">Save TODO</string>
    <string name="delete_todo_title">Delete TODO</string>
    <string name="delete_todo_description">Delete TODO selected?</string>
    <string name="yes_delete_todo">Yes, delete TODO.</string>
    <string name="cancel">Cancel</string>
    <string name="error_todo_title">Title must not be empty.</string>
    <string name="error_todo_description">Description must not be empty.</string>
</resources>